# bc

./: .djlintrc  .gitignore  Dockerfile  Procfile  README.md  Untitled-1.md  db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_password.py  0003_customuser_groups_customuser_user_permissions_and_more.py
accounts/templates/accounts/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
bc/: asgi.py  settings.py  urls.py  wsgi.py
core/: urls.py  views.py
core/static/core/css/: main.css
core/templates/core/: base.html  index.html
core/templatetags/: custom_filters.py
dashboard/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_businesscard_first_name_businesscard_last_name.py  0003_alter_businesscard_location.py  0004_alter_businesscard_first_name_and_more.py  0005_businesscard_background_color_and_more.py  0006_remove_businesscard_theme.py  0007_businesscard_allow_lead_capture.py  0008_alter_businesscard_allow_lead_capture.py  0009_lead.py  0010_lead_company_lead_job_title_lead_notes.py
dashboard/templates/dashboard/: add_business_card.html  business_card_detail.html  dashboard.html  edit_business_card.html  lead_detail.html  share_business_card.html  view_leads.html
staticfiles/core/css/: custom_bulma.css  custom_bulma.scss  styles.scss
