[tool.poetry]
name = "bc"
version = "0.1.0"
description = ""
authors = ["nolanbraman <nolan.braman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
pillow = "^11.0.0"
djlint = "^1.36.3"
django-environ = "^0.11.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile="django"